--- a/Orocto.ExpenseMate.Translation/Orocto.ExpenseMate.Translation.csproj
+++ b/Orocto.ExpenseMate.Translation/Orocto.ExpenseMate.Translation.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\Orocto.ExpenseMate.Wrapper\Orocto.ExpenseMate.Wrapper.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Repositories\" />
+    </ItemGroup>
+
 </Project>
